--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 *{
   box-sizing: border-box;
+  
 }
 html,
 body,
@@ -17,4 +18,5 @@ body,
   padding: 0;
   overflow: hidden;
   box-sizing: border-box;
+  font-size: 16px;
 }
